# Adrian

./: .gitignore  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  GET_STARTED_AI_GUIDE.md  GET_STARTED_AI_GUIDE_V2.md  Makefile  README.md  SOUL.md  agent.yaml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: py-sdk-release.yml  sdk-lint.yml  ts-sdk-ci.yml  ts-sdk-release.yml
backend/: Makefile
backend/cmd/adrian/: main.go
backend/data/: adrian.db
backend/internal/api/: handlers_agents.go  handlers_auth.go  handlers_events.go  handlers_policy.go  handlers_reviews.go  handlers_stats.go  handlers_test.go  handlers_verdicts.go
backend/internal/config/: config.go  config_test.go
backend/internal/db/: db.go  migrate.go  migrate_test.go
backend/internal/engine/: client.go  client_test.go  engine.go  parse.go  policy.go  policy_test.go
backend/internal/notifications/: discord_test.go  dispatcher.go
backend/internal/proto/: event.pb.go
backend/internal/store/: agents.go  events.go  events_test.go  hitl.go  policies.go  stats.go  verdicts.go  webhooks.go
backend/internal/ws/: frames.go  handler.go  handler_test.go  helpers.go  hub.go  hub_test.go  session.go
backend/migrations/: 002_verdict_status_policy.sql  embed.go
backend/proto/: README.md  event.proto
docs/: ARCHITECTURE.md
examples/: langgraph_multi_agent.py
examples/python/: anthropic_quickstart.py  create_agent.py  hitl_credential_leak.py  manual_instrumentation.py  quickstart.py  react_agent.py
examples/typescript/: hitl_credential_leak.ts  langchain_sandbox_prompt_injection.ts
frontend/: next.config.js  package.json  postcss.config.js  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/change-password/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: alert-explanation.tsx  badge.tsx  json-block.tsx  pagination.tsx  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  time-range.tsx  topbar.tsx
frontend/lib/: agent-profile-templates.ts  utils.ts
integrations/claude-code/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/adrian_cc/: __init__.py  agent.py  tracker.py  transcript.py
integrations/claude-code/adrian_cc/proto/: README.md  event_pb2.py  event_pb2.pyi
integrations/claude-code/adrian_cc/proto/buf/: __init__.py
integrations/claude-code/adrian_cc/proto/buf/validate/: __init__.py
integrations/claude-code/commands/: adrian-init.md  adrian-status.md
integrations/claude-code/hooks/: hooks.json
integrations/claude-code/tests/: __init__.py  test_agent.py  test_integration.py  test_multi_agent.py  test_state_and_subagent.py  test_transcript.py
integrations/claude-code/tools/: regen-proto.sh
proto/: event.proto
scripts/: add_license_header.py  setup.py
sdk/: pyproject.toml
sdk/adrian/: __init__.py  mcp.py  types.py  ws.py
sdk/python/: README.md  pyproject.toml  pyrightconfig.json
sdk/python/adrian/: __init__.py  anthropic_handler.py  callbacks.py  config.py  context.py  handler.py  hooks.py  identity.py  langchain_handler.py  mcp.py  pairing.py  session_persistence.py  types.py  ws.py
sdk/python/adrian/adapters/: __init__.py  langgraph.py
sdk/python/adrian/format/: __init__.py  types.py
sdk/python/adrian/handlers/: __init__.py  jsonl.py
sdk/python/adrian/pii/: __init__.py  _engine.py  _patterns.py  _redactor.py  _strategies.py
sdk/python/adrian/proto/: __init__.py  buf.gen.yaml  event_pb2.py  event_pb2.pyi
sdk/python/adrian/proto/buf/validate/: validate_pb2.py  validate_pb2.pyi
sdk/python/tests/: __init__.py  test_anthropic_handler.py  test_block_mode.py  test_block_mode_races.py  test_exec_modes.py  test_extract_tool_calls.py  test_handler.py  test_init.py  test_mcp.py  test_parent_context_scenarios.py  test_pii_engine.py  test_pii_integration.py  test_pii_patterns.py  test_pii_redactor.py  test_resilience.py  test_session_persistence.py  test_ws.py
sdk/python/tools/: regen-proto.sh
sdk/tests/: test_block_mode.py  test_block_mode_races.py  test_extract_tool_calls.py  test_handler.py  test_init.py  test_mcp.py  test_parent_context_scenarios.py  test_pii_integration.py  test_pii_redactor.py  test_resilience.py  test_session_persistence.py
sdk/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
(+24 files in other folders)
