[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adrian-cc"
version = "0.1.0"
description = "Adrian runtime security SDK for Claude Code: hooks-based observability and blocking."
license = {text = "Apache-2.0"}
authors = [
    {name = "Secure Agentics", email = "support@secureagentics.ai"}
]
keywords = [
    "claude-code",
    "ai",
    "security",
    "monitoring",
    "observability",
    "hooks",
    "runtime-security",
]
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.29.0",
    "websockets>=16.0",
]

[project.scripts]
adrian-cc = "adrian_cc.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adrian_cc*"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["adrian_cc"]
extend-exclude = ["adrian_cc/proto", "vendor"]

[tool.ruff.lint]
select = [
  "D",        # pydocstyle: docstring enforcement
  "E", "W",   # pycodestyle (PEP 8)
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D203",  # Conflicts with D211 (no-blank-line-before-class)
  "D213",  # Conflicts with D212 (multi-line-summary-second-line)
  "E501",  # line-too-long: handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests don't carry pydocstyle docstrings, the test name is the docstring.
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
